--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Slot Machine</title>
     <!-- CSS Section -->
-    <link href="/css/main.css" rel="stylesheet" />
+    <link href="./css/main.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -51,26 +51,26 @@
     <!-- JavaScript Section -->
 
     <!-- Createjs Libraries -->
-    <script src="/node_modules/easeljs/lib/easeljs.min.js"></script>
-    <script src="/node_modules/tweenjs/lib/tweenjs.min.js"></script>
-    <script src="/node_modules/soundjs/lib/soundjs.min.js"></script>
-    <script src="/node_modules/preloadjs/lib/preloadjs.min.js"></script>
+    <script src="./node_modules/easeljs/lib/easeljs.min.js"></script>
+    <script src="./node_modules/tweenjs/lib/tweenjs.min.js"></script>
+    <script src="./node_modules/soundjs/lib/soundjs.min.js"></script>
+    <script src="./node_modules/preloadjs/lib/preloadjs.min.js"></script>
 
     <!-- Managers -->
-    <script src="/Scripts/managers/game.js"></script>
+    <script src="./Scripts/managers/game.js"></script>
 
     <!-- Game Objects -->
-    <script src="/Scripts/objects/gameObject.js"></script>
-    <script src="/Scripts/objects/label.js"></script>
-    <script src="/Scripts/objects/button.js"></script>
-    <script src="/Scripts/objects/scene.js"></script>
+    <script src="./Scripts/objects/gameObject.js"></script>
+    <script src="./Scripts/objects/label.js"></script>
+    <script src="./Scripts/objects/button.js"></script>
+    <script src="./Scripts/objects/scene.js"></script>
 
     <!-- Scenes -->
-    <script src="/Scripts/scenes/play.js"></script>
+    <script src="./Scripts/scenes/play.js"></script>
 
     <!-- Core Game Scripts -->
 
-    <script src="/Scripts/core/game.js"></script>
+    <script src="./Scripts/core/game.js"></script>
 </body>
 
 </html>
