added start and over scene.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <canvas id="canvas" width="640" height="480"></canvas>
+    <input id="playerBet" type="text"/>
     <!-- <div>
         <h1>Slot Machine</h1>
         <div>
@@ -57,20 +58,23 @@
     <script src="./node_modules/preloadjs/lib/preloadjs.min.js"></script>
 
     <!-- Managers -->
-    <script src="./Scripts/managers/game.js"></script>
+    <script src="./scripts/managers/game.js"></script>
 
     <!-- Game Objects -->
-    <script src="./Scripts/objects/gameObject.js"></script>
-    <script src="./Scripts/objects/label.js"></script>
-    <script src="./Scripts/objects/button.js"></script>
-    <script src="./Scripts/objects/scene.js"></script>
+    <script src="./scripts/objects/gameObject.js"></script>
+    <script src="./scripts/objects/background.js"></script>
+    <script src="./scripts/objects/label.js"></script>
+    <script src="./scripts/objects/button.js"></script>
+    <script src="./sripts/objects/scene.js"></script>
 
     <!-- Scenes -->
-    <script src="./Scripts/scenes/play.js"></script>
+    <script src="./scripts/scenes/play.js"></script>
+    <script src="./scripts/scenes/start.js"></script>
+    <script src="./scripts/scenes/over.js"></script>
 
     <!-- Core Game Scripts -->
 
-    <script src="./Scripts/core/game.js"></script>
+    <script src="./scripts/core/game.js"></script>
 </body>
 
 </html>
