--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <canvas id="canvas" width="640" height="480"></canvas>
+    <input id="playerBet" type="text">
     <!-- JavaScript Section -->
 
     <!-- Createjs Libraries -->
